--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My blog</title>
+    <link rel="stylesheet" href="reset.min.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+<div class="header">
+    <div class="topInfo middle-body">
+        <i class="logo"></i>
+        <span class="title">Info<b>Share</b></span>
+        <em></em>
+        <span class="des">A personal blog about everything.</span>
+        <div class="search">
+            <input type="text" placeholder="Search"><i></i>
+        </div>
+    </div>
+</div>
+<div class="nav-list">
+    <ul class="nav middle-body">
+        <li><a class="on" href="###">Article</a></li>
+        <li><a href="###">News</a></li>
+        <li><a href="###">Movie</a></li>
+        <li><a href="###">Music</a></li>
+        <li><a href="###">Game</a></li>
+        <li><a href="###">Map</a></li>
+    </ul>
+</div>
 </body>
 </html>
