--- a/static/resume.html
+++ b/static/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My blog</title>
     <link rel="stylesheet" href="./css/reset.min.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/resume.css">
 </head>
 <body>
 <div class="header">
@@ -28,6 +28,11 @@
         <li><a href="###">Game</a></li>
         <li><a href="###">Map</a></li>
     </ul>
+</div>
+<div class="container">
+    <div class="containerBox middle-body">
+
+    </div>
 </div>
 </body>
 </html>
