--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My blog</title>
     <link rel="stylesheet" href="./css/reset.min.css">
+    <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -33,7 +34,7 @@
 </div>
 <!--底部版权-->
 <div class="copyright">
-    <p class="middle-body">&copy; 2016 InfoShare of my blog. All Rights Reserved.</p>
+    <p class="middle-body">Copyright &copy; 2016 - InfoShare of my blog. All Rights Reserved.</p>
 </div>
 <script src="./js/jquery-3.1.1.min.js"></script>
 <script src="./js/index.js"></script>
