--- a/static/resume.html
+++ b/static/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My blog</title>
     <link rel="stylesheet" href="./css/reset.min.css">
-    <link rel="stylesheet" href="./css/swiper-3.4.1.min.css">
+    <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./css/resume.css">
 </head>
 <body>
@@ -32,28 +32,28 @@
         <li><a href="###">Map</a></li>
     </ul>
 </div>
-<!--中部轮播图-->
+<!--中部内容-->
 <div class="container">
     <div class="containerBox middle-body">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">Profile</div>
-                <div class="swiper-slide">Education</div>
-                <div class="swiper-slide">Experience</div>
-                <div class="swiper-slide">Skills</div>
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
+        <ul class="list clear">
+            <li id="111">111</li>
+            <li id="222">222</li>
+            <li id="333">333</li>
+            <li id="444">444</li>
+        </ul>
+        <ul class="side rightSide">
+            <li><a href="#111">111</a></li>
+            <li><a href="#222">222</a></li>
+            <li><a href="#333">333</a></li>
+            <li><a href="#444">444</a></li>
+        </ul>
     </div>
 </div>
 <!--底部版权-->
 <div class="copyright">
-    <p class="middle-body">&copy; 2016 InfoShare of my blog. All Rights Reserved.</p>
+    <p class="middle-body">Copyright &copy; 2016 - InfoShare of my blog. All Rights Reserved.</p>
 </div>
 <script src="./js/jquery-3.1.1.min.js"></script>
-<script src="./js/swiper-3.4.1.jquery.min.js"></script>
 <script src="./js/resume.js"></script>
 </body>
 </html>
